Fix double scroll bar issue (#350)

--- a/src/app/styles/_ads.scss
+++ b/src/app/styles/_ads.scss
@@ -8,8 +8,6 @@
 
     text-align: center;
 
-    line-height: 0;
-
     &__label {
         display: none;
     }
